--- a/welcomescreen.ui
+++ b/welcomescreen.ui
@@ -98,7 +98,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgb
      <property name="autoFillBackground">
       <bool>false</bool>
      </property>
-     <widget class="QWidget" name="page">
+     <widget class="QWidget" name="Avtorisation">
       <property name="layoutDirection">
        <enum>Qt::LeftToRight</enum>
       </property>
@@ -219,7 +219,36 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgb
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="page_2"/>
+     <widget class="QWidget" name="Zakazchik">
+      <widget class="QLabel" name="label_6">
+       <property name="geometry">
+        <rect>
+         <x>490</x>
+         <y>190</y>
+         <width>66</width>
+         <height>18</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Заказчик</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="Master">
+      <widget class="QLabel" name="label_7">
+       <property name="geometry">
+        <rect>
+         <x>360</x>
+         <y>240</y>
+         <width>66</width>
+         <height>18</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Master</string>
+       </property>
+      </widget>
+     </widget>
     </widget>
    </item>
   </layout>
