--- a/welcomescreen.ui
+++ b/welcomescreen.ui
@@ -34,7 +34,8 @@ color: rgb(255, 255, 255);
 border: 0px;
 }
 QWidget
-{font: &quot;Comic Sans MS&quot;;}
+{font: &quot;Comic Sans MS&quot;;
+}
 </string>
   </property>
   <property name="sizeGripEnabled">
@@ -112,6 +113,9 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgb
      </property>
      <property name="styleSheet">
       <string notr="true"/>
+     </property>
+     <property name="currentIndex">
+      <number>0</number>
      </property>
      <widget class="QWidget" name="Avtorisation">
       <property name="layoutDirection">
@@ -246,8 +250,8 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgb
       <widget class="QLabel" name="label_6">
        <property name="geometry">
         <rect>
-         <x>490</x>
-         <y>190</y>
+         <x>440</x>
+         <y>220</y>
          <width>66</width>
          <height>18</height>
         </rect>
@@ -256,36 +260,49 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgb
         <string>Заказчик</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>120</y>
-         <width>103</width>
-         <height>36</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QPushButton#pushButton {background-color: rgb(255,125,150);
-border: 5x;}</string>
-       </property>
-       <property name="text">
-        <string>PushButton</string>
-       </property>
-      </widget>
      </widget>
      <widget class="QWidget" name="Master">
       <widget class="QLabel" name="label_7">
        <property name="geometry">
         <rect>
-         <x>360</x>
-         <y>240</y>
+         <x>410</x>
+         <y>220</y>
          <width>66</width>
          <height>18</height>
         </rect>
        </property>
        <property name="text">
-        <string>Master</string>
+        <string>Мастер</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="Operator">
+      <widget class="QLabel" name="label_9">
+       <property name="geometry">
+        <rect>
+         <x>410</x>
+         <y>250</y>
+         <width>66</width>
+         <height>18</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Оператор</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="Manager">
+      <widget class="QLabel" name="label_8">
+       <property name="geometry">
+        <rect>
+         <x>340</x>
+         <y>250</y>
+         <width>101</width>
+         <height>18</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Менеджер</string>
        </property>
       </widget>
      </widget>
