--- a/views/welcomescreen.ui
+++ b/views/welcomescreen.ui
@@ -55,7 +55,7 @@ QWidget
       <string notr="true"/>
      </property>
      <property name="currentIndex">
-      <number>3</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="Avtorisation">
       <property name="layoutDirection">
@@ -187,19 +187,18 @@ QWidget
       </layout>
      </widget>
      <widget class="QWidget" name="Zakazchik">
-      <widget class="QLabel" name="label_6">
-       <property name="geometry">
-        <rect>
-         <x>440</x>
-         <y>220</y>
-         <width>66</width>
-         <height>18</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Заказчик</string>
-       </property>
-      </widget>
+      <layout class="QGridLayout" name="gridLayout_6">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Заказчик</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QTableWidget" name="tableZakazchikaZayavki"/>
+       </item>
+      </layout>
      </widget>
      <widget class="QWidget" name="Master">
       <layout class="QGridLayout" name="gridLayout_5">
